--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,3 +31,76 @@ background: variables.$primary-color;
 	box-sizing: border-box;
 }
 
+body{
+	margin: 0;
+	font-family: 'Montserrat', sans-serif;
+	line-height: 1.6;
+	background-color: black;
+	color: white;
+
+	.hero{
+		background-image: url(/src/img/tesla-background.jpeg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-attachment: fixed;
+		text-align: center;
+
+		.title{
+			font-size: 4rem;
+			font-size: 3rem;
+			line-height: 1;
+			color: black;
+		}
+	}
+
+	img{
+		max-width: 100%;
+		display: block;
+	}
+
+	.container{
+		width: 85%;
+		max-width: 65rem;
+		margin: 0 auto;
+
+		h1,
+		p,
+		a{
+			margin-top: 2rem;
+		}
+
+		.sub-heading{
+			color: black;
+		}
+
+		.section-title{
+			text-align: center;
+			font-size: 2.5rem;
+			line-height: 1.6;
+		}
+
+		.product{
+			padding: 3rem 0;
+		}
+	}
+
+	.btn{
+		display: inline-block;
+		background-color: white;
+		text-decoration: none;
+		color: black;
+		border-radius: .5rem;
+		padding: 0.5rem 1.25rem;
+		font-weight: 600;
+		font-size: 1.125rem;
+		transition: transform 250ms ease-in-out,
+					opacity 250ms linear;
+	}
+
+	.btn:hover,
+	.btn:focus{
+		transform: scale(1.1);
+		opacity: 0.9;
+	}
+}
+
